--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,8 +18,18 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  width: 100%;
+ 
+}
+
+main.container {
+  background-color: #f4f1ec;
+  margin-right: 100px;
+  margin-left: 100px;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+
