--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,5 +1,6 @@
-.tweets-container {
+.tweets-container:hover {
   display: flex;
+  border:4px solid #424144; 
   flex-direction: column;
   background-color: #f4f1ec;
   margin-right: 10px;
@@ -7,8 +8,11 @@
 }
 
 .new-tweet {
-  width: 80%
-}
+  display:flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  }
 
 .tweet-action {
   display: flex;
@@ -50,5 +54,68 @@ textarea#tweet-text::placeholder {
   }
 
   #char-counter.negative {
-    color:#ff0303;
+    color:#ff0000;
   }
+
+  
+ .tweet-header {
+  display: flex;
+  align-items: flex-start;
+  padding-left: 1em;
+  padding-top: 1em;
+ 
+
+}
+
+h1.posterName {
+  display:flex;
+  font-weight:300;
+  flex-direction:row;
+  font-size:30px;
+  padding-left: 1em;
+}
+
+#nameAndUsername {
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  justify-content: space-between;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+}
+h1.username {
+  font-weight: 700;
+  font-size: 30px;
+  padding-right: 1.5em;
+}
+
+.tweet-content {
+  border-style: outset;
+  border-bottom: 2px solid #424144;
+  padding: 1em;
+}
+
+.tweet-footer {
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: .5em;
+}
+
+.daysAGo {
+  padding: 0.5em;
+  font-size: 15px;
+}
+.icons {
+  font-size: 15px;
+}
+
+article:hover {
+  
+    box-shadow: 0  30px 30px #89a5ff;
+} 
+
+/* #outsideTweetsContainer:hover {
+  box-shadow: 0 0 20px rgba(6, 2, 31, 0.2);
+    background-color:#f4f1ec ;
+} */
