--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,9 +3,10 @@
   background-color: #4056A1;
   color: #FFFFFF;
   font-family: 'Bungee', cursive; 
-  padding-left: 1.5em;
-  padding-right: 1.5em;
-  
+  padding: 1.5em;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 #writeTweet {
