--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,12 +1,10 @@
-.tweets-container:hover {
+#tweets-container {
   display: flex;
-  border:4px solid #424144; 
   flex-direction: column;
   background-color: #f4f1ec;
   margin-right: 10px;
   margin-left: 10px;
-  
-  
+    
 }
 
 .new-tweet {
@@ -68,7 +66,7 @@ textarea#tweet-text::placeholder {
 
 }
 
-h1.posterName {
+.posterName {
   display:flex;
   font-weight:300;
   flex-direction:row;
@@ -84,7 +82,7 @@ h1.posterName {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 300;
 }
-h1.username {
+.username {
   font-weight: 700;
   font-size: 30px;
   color: #f4f1ec;
@@ -92,11 +90,12 @@ h1.username {
 }
 
 .tweet-content {
-  border-style: outset;
+  
   border-bottom: 2px solid #424144;
-  padding: 1em;
+  padding: 10px;
 }
 
+/* change the padding */
 .tweet-footer {
   display:flex;
   flex-direction: row;
@@ -108,18 +107,17 @@ h1.username {
   padding: 0.5em;
   font-size: 15px;
 }
-.icons {
-  font-size: 15px;
+article {
+  border: 4px solid #424144;
+  padding: 15px;
+  margin-bottom: 25px;
 }
-
 article:hover  {
   box-shadow: 10px  10px #95c1eb;
+  color: black;
 } 
 article:hover .username {
   color: #95c1eb;
+    
 } 
 
-/* #outsideTweetsContainer:hover {
-  box-shadow: 0 0 20px rgba(6, 2, 31, 0.2);
-    background-color:#f4f1ec ;
-} */
