--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,15 +1,31 @@
-.header {
-  display: flex;
-  height: 400px;
-  justify-content: center;
-  align-items: center; 
-  background-color: #002852;
-  background-image: url("https://www.transparenttextures.com/patterns/retina-wood.png");
-  }
-
-.name {
-  display: flex;
-  justify-content: center;
-  align-items: center; 
-  background-image: url("https://www.transparenttextures.com/patterns/xv.png");
+#header {
+  display                   : flex;
+  margin-top                : 100px;
+  height                    : 500px;
+  flex-direction            : column;
+  justify-content           : flex-end;
+  align-items               : center; 
+  background-image          : url("https://i.gifer.com/6kc.gif");
+  width                     : 30%;
+  margin-right              : 10px;
+  margin-left               : 10px;
 }
+
+h2 {
+  filter                    : drop-shadow(0px 0px 10px rgb(16, 210, 213));
+}
+
+.pic {
+  filter                    : drop-shadow(0px 0px 10px black);
+}
+
+@media only screen and (max-width: 768px) {
+  #header {
+    width: 100%;
+  }
+ 
+}
+
+/* breakpoints on smaller screens
+when body changed to a smaller screen needs to change the flex direction to column 
+header becomes 100% of the width  */
