--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,6 +15,7 @@ html {
  */
 
 body {
+  display: flex;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
@@ -25,10 +26,16 @@ body {
 
 main.container {
   background-color: #f4f1ec;
-  margin-right: 100px;
-  margin-left: 100px;
+  width: 40%;
+  margin: 0 auto; 
 }
 
+@media only screen and (max-width: 768px) {
+  main.container {
+    width: 100%;
+  }
+ 
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
