--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -16,14 +16,18 @@
 .tweet-action {
   display           : flex;
   justify-content   : space-between;
+  margin-bottom     : 20px;
   margin-right      : 20px;
   margin-left       : 20px;
   background-color  : #f4f1ec;
 }
 
+.tweet-form {
+  width: 100%
+}
+
 textarea {
-  margin            : 20px;
-  width             : 980px;
+  width             : 100%;
   height            : 90px;
   background-color  : #f4f1ec;
   resize            : none;
@@ -45,7 +49,8 @@ textarea#tweet-text::placeholder {
   border-style  : outset;
   border-color  : -internal-light-dark(rgb(118, 118, 118), rgb(195, 195, 195));
   border-image  : initial;
-  }
+  
+}
 
 #char-counter {
   font-family   :'Bungee', cursive;
@@ -57,15 +62,12 @@ textarea#tweet-text::placeholder {
 }
 
 .error {
-  display             : flex;
+  display             :  none;
   height              : 50px;
   visibility          : hidden;
-  justify-content     : space-around;
-  align-self          : stretch;
-  align-items         : center;
   background-color    : #f3cff5;
   color               : #D8000C;
-  margin-top          : 30px;
+  margin-top          : 100px;
   font-family         : 'Source Sans Pro', sans-serif;
   font-weight         : 300;
   font-size           : 35px;
@@ -77,6 +79,10 @@ textarea#tweet-text::placeholder {
   background-position : 50px center;
 }
 
+#err-msg {
+  display: flex;
+  justify-content: center;
+}
 .error.show {
   visibility      : visible;
 }
@@ -119,25 +125,28 @@ textarea#tweet-text::placeholder {
 
 /* change the padding */
 .tweet-footer {
-  display         :flex;
-  flex-direction  : row;
-  justify-content : space-between;
-  padding         : .5em;
+  display             :flex;
+  flex-direction      : row;
+  justify-content     : space-between;
+  padding             : .5em;
 }
 
 .daysAGo {
   padding       : 0.5em;
-  font-size      : 15px;
+  font-size     : 15px;
 }
+
 article {
   border        : 4px solid #424144;
   padding       : 15px;
   margin-bottom : 25px;
 }
+
 article:hover  {
   box-shadow    : 10px  10px #95c1eb;
   color         : black;
 } 
+
 article:hover .username {
   color          : #95c1eb;
 } 
